# ChangeLog for x11-proto/xf86driproto
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-proto/xf86driproto/ChangeLog,v 1.29 2009/04/16 02:34:43 jer Exp $

  16 Apr 2009; Jeroen Roovers <jer@gentoo.org> xf86driproto-2.0.4.ebuild:
  Stable for HPPA (bug #251832).

  15 Apr 2009; Raúl Porcel <armin76@gentoo.org> xf86driproto-2.0.4.ebuild:
  ia64/sh stable wrt #251832

  06 Apr 2009; Friedrich Oslage <bluebird@gentoo.org>
  xf86driproto-2.0.4.ebuild:
  Stable on sparc, bug #251832

  05 Apr 2009; Markus Meier <maekke@gentoo.org> xf86driproto-2.0.4.ebuild:
  x86 stable, bug #251832

  05 Apr 2009; Olivier Crête <tester@gentoo.org> xf86driproto-2.0.4.ebuild:
  Stable on amd64, bug #251832

  03 Apr 2009; Brent Baude <ranger@gentoo.org> xf86driproto-2.0.4.ebuild:
  Marking xf86driproto-2.0.4 ppc64 stable for bug 251832

  03 Apr 2009; Brent Baude <ranger@gentoo.org> xf86driproto-2.0.4.ebuild:
  Marking xf86driproto-2.0.4 ppc stable for bug 251832

  16 Dec 2008; Jeroen Roovers <jer@gentoo.org> xf86driproto-2.0.4.ebuild:
  Marked ~hppa (bug #237411).

*xf86driproto-2.0.4 (10 Apr 2008)

  10 Apr 2008; Hanno Boeck <hanno@gentoo.org> +xf86driproto-2.0.4.ebuild:
  Version bump.

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> xf86driproto-2.0.3.ebuild:
  Mark 2.0.3 stable on ia64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  xf86driproto-2.0.3.ebuild:
  arm/sh stable

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  xf86driproto-2.0.3.ebuild:
  ppc/sparc/mips/alpha stable

  30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  xf86driproto-2.0.3.ebuild:
  Stable on amd64.

  30 Jun 2006; Markus Rothe <corsair@gentoo.org> xf86driproto-2.0.3.ebuild:
  Stable on ppc64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  xf86driproto-2.0.3.ebuild:
  x86 stable.

  03 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  xf86driproto-2.0.3.ebuild:
  Add ~x86-fbsd keyword.
