@@ -1,6 +1,6 @@
 DIST xf86driproto-2.0.3.tar.bz2 42828 RMD160 ed971412f91326ea93d2a74b1f9be1a0e8abf7a5 SHA1 7ec544426fd33239ae7b0a293baa41a82eb2cbf4 SHA256 111c469a24374803b08104c725d8318760b226cedccd12b199c83d1b2756b8d6
 DIST xf86driproto-2.0.4.tar.bz2 43814 RMD160 d0ab74ca15d28b1b5f42852cfd24d960c481ec79 SHA1 bba018443dad831b328e7353cf034522401e2e6b SHA256 f57da66bec8563502fe95c0e3f6ed297d9985862f5b64a5c9d3039719ac7f9da
-EBUILD xf86driproto-2.0.3.ebuild 488 RMD160 d570a4cd1f7871135b9ba77284c84358bd24a4d6 SHA1 0fb0260b918644fdcd80a02b78ccf0f641e659f0 SHA256 0d3826be0613962fe3cfb5d731a5b8d92bdf81527b9d26cca423d99e121d3ee5
-EBUILD xf86driproto-2.0.4.ebuild 474 RMD160 debdbfe0b8b6b9613fa03fbd946363ede51fc5c1 SHA1 e77e265899e11f563c76d9a9082837f31ba210c4 SHA256 5ba81310fe866175aeffa7521fcd39de858303371f689582b59b32e28a416eea
-MISC ChangeLog 3481 RMD160 cc777629a20a33776813185283ae1358f3e70246 SHA1 5eaa608452da61aca6e3a2ba6dc51334c37b987f SHA256 8b691e27177e417eba561db2d3c153684f5800fe4435dd03d696172c594971a3
+EBUILD xf86driproto-2.0.3.ebuild 471 RMD160 fd51db5303fff8097d2d36c065ff79010dcf6424 SHA1 42d7d775fabd969f157a61093c829a778712104d SHA256 033793427c602d0329da345840139182949dd912dcf247435a384a000522d223
+EBUILD xf86driproto-2.0.4.ebuild 484 RMD160 3738cb952e1fb30c9578a956d9b17732f7b57636 SHA1 af6f05d30edf0a9d091bbd2bb6d5854541f43a5e SHA256 21750c6ab976367394b0445290e61a766ec230eaac8162e32d71e3db240507db
+MISC ChangeLog 3618 RMD160 76b6a345b2bbecea884ab1404b3ab15419af6461 SHA1 225a1470ea685315c621f8b61dad9a2c3528f95d SHA256 c686728ea5e248546cf3e17db61436b0ab26d3f13e845f4981d8ce4607752a40
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
