@@ -1,6 +1,10 @@
 # ChangeLog for x11-proto/xf86driproto
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-proto/xf86driproto/ChangeLog,v 1.29 2009/04/16 02:34:43 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-proto/xf86driproto/ChangeLog,v 1.30 2009/05/05 15:36:53 fauli Exp $
+
+  05 May 2009; Christian Faulhammer <fauli@gentoo.org>
+  xf86driproto-2.0.3.ebuild, xf86driproto-2.0.4.ebuild:
+  fix repoman warnings
 
   16 Apr 2009; Jeroen Roovers <jer@gentoo.org> xf86driproto-2.0.4.ebuild:
   Stable for HPPA (bug #251832).
